--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,110 @@
-streamlit==1.28.0
+altair==5.1.2
 asttokens==2.4.1
 attrs==23.1.0
 beautifulsoup4==4.12.2
+blinker==1.7.0
+cachetools==5.3.2
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
 comm==0.2.0
+cryptography==41.0.5
 debugpy==1.8.0
 decorator==5.1.1
+easyocr==1.7.1
 exceptiongroup==1.1.3
 executing==2.0.1
+filelock==3.13.1
+fsspec==2023.10.0
+gitdb==4.0.11
+GitPython==3.1.40
 googlesearch-python==1.2.3
 h11==0.14.0
 idna==3.4
+imageio==2.32.0
+importlib-metadata==6.8.0
 ipykernel==6.26.0
 ipython==8.17.2
 jedi==0.19.1
+Jinja2==3.1.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.1
 jupyter_client==8.6.0
 jupyter_core==5.5.0
+lazy_loader==0.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
+mdurl==0.1.2
+mpmath==1.3.0
 nest-asyncio==1.5.8
+networkx==3.2.1
+ninja==1.11.1.1
 numpy==1.26.2
+opencv-python-headless==4.8.1.78
 outcome==1.3.0.post0
 packaging==23.2
 pandas==2.1.3
 parso==0.8.3
+pdfminer==20191125
+pdfminer.six==20221105
+pdfplumber==0.10.3
+Pillow==10.0.1
 platformdirs==4.0.0
 prompt-toolkit==3.0.41
+protobuf==4.25.1
 psutil==5.9.6
 pure-eval==0.2.2
+pyarrow==14.0.1
+pyclipper==1.3.0.post5
 pycparser==2.21
+pycryptodome==3.19.0
+pydeck==0.8.1b0
 Pygments==2.16.1
+pypdfium2==4.24.0
 PySocks==1.7.1
+python-bidi==0.4.2
 python-dateutil==2.8.2
 pytz==2023.3.post1
 pywin32==306
+PyYAML==6.0.1
 pyzmq==25.1.1
+referencing==0.31.0
 requests==2.31.0
+rich==13.7.0
+rpds-py==0.13.0
+scikit-image==0.22.0
+scipy==1.11.4
 selenium==4.15.2
+shapely==2.0.2
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
 stack-data==0.6.3
+stqdm==0.0.5
+streamlit==1.28.0
+sympy==1.12
+tenacity==8.2.3
+tifffile==2023.9.26
+toml==0.10.2
+toolz==0.12.0
+torch==2.1.1
+torchvision==0.16.1
 tornado==6.3.3
+tqdm==4.66.1
 traitlets==5.13.0
 trio==0.23.1
 trio-websocket==0.11.1
+typing_extensions==4.8.0
 tzdata==2023.3
+tzlocal==5.2
 urllib3==2.1.0
+validators==0.22.0
+watchdog==3.0.0
 wcwidth==0.2.10
 wsproto==1.2.0
->>>>>>> main
+zipp==3.17.0
