--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ gitdb==4.0.11
 GitPython==3.1.40
 googlesearch-python==1.2.3
 h11==0.14.0
+huggingface-hub==0.19.4
 idna==3.4
 imageio==2.32.0
 importlib-metadata==6.8.0
@@ -29,6 +30,7 @@ ipykernel==6.26.0
 ipython==8.17.2
 jedi==0.19.1
 Jinja2==3.1.2
+joblib==1.3.2
 jsonschema==4.20.0
 jsonschema-specifications==2023.11.1
 jupyter_client==8.6.0
@@ -42,6 +44,7 @@ mpmath==1.3.0
 nest-asyncio==1.5.8
 networkx==3.2.1
 ninja==1.11.1.1
+nltk==3.8.1
 numpy==1.26.2
 opencv-python-headless==4.8.1.78
 outcome==1.3.0.post0
@@ -63,18 +66,21 @@ pycparser==2.21
 pycryptodome==3.19.0
 pydeck==0.8.1b0
 Pygments==2.16.1
+PyPDF2==3.0.1
 pypdfium2==4.24.0
+pyphen==0.14.0
 PySocks==1.7.1
 python-bidi==0.4.2
 python-dateutil==2.8.2
 pytz==2023.3.post1
-pywin32==306
 PyYAML==6.0.1
 pyzmq==25.1.1
 referencing==0.31.0
+regex==2023.10.3
 requests==2.31.0
 rich==13.7.0
 rpds-py==0.13.0
+safetensors==0.4.0
 scikit-image==0.22.0
 scipy==1.11.4
 selenium==4.15.2
@@ -89,7 +95,9 @@ stqdm==0.0.5
 streamlit==1.28.0
 sympy==1.12
 tenacity==8.2.3
+textstat==0.7.3
 tifffile==2023.9.26
+tokenizers==0.15.0
 toml==0.10.2
 toolz==0.12.0
 torch==2.1.1
@@ -97,6 +105,7 @@ torchvision==0.16.1
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.13.0
+transformers==4.35.2
 trio==0.23.1
 trio-websocket==0.11.1
 typing_extensions==4.8.0
