--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,11 @@ attrs==23.1.0
 beautifulsoup4==4.12.2
 blinker==1.7.0
 cachetools==5.3.2
+Camelot==12.6.29
+cdifflib==1.2.6
 certifi==2023.11.17
 cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
@@ -14,6 +17,7 @@ cryptography==41.0.5
 debugpy==1.8.0
 decorator==5.1.1
 easyocr==1.7.1
+Elixir==0.7.1
 exceptiongroup==1.1.3
 executing==2.0.1
 filelock==3.13.1
@@ -51,6 +55,8 @@ outcome==1.3.0.post0
 packaging==23.2
 pandas==2.1.3
 parso==0.8.3
+pbr==6.0.0
+pdf2image==1.16.3
 pdfminer==20191125
 pdfminer.six==20221105
 pdfplumber==0.10.3
@@ -66,6 +72,8 @@ pycparser==2.21
 pycryptodome==3.19.0
 pydeck==0.8.1b0
 Pygments==2.16.1
+PyMuPDF==1.23.6
+PyMuPDFb==1.23.6
 PyPDF2==3.0.1
 pypdfium2==4.24.0
 pyphen==0.14.0
@@ -90,10 +98,14 @@ smmap==5.0.1
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
+SQLAlchemy==0.7.10
+sqlalchemy-migrate==0.11.0
+sqlparse==0.4.4
 stack-data==0.6.3
 stqdm==0.0.5
-streamlit==1.28.0
+streamlit==1.28.2
 sympy==1.12
+Tempita==0.5.2
 tenacity==8.2.3
 textstat==0.7.3
 tifffile==2023.9.26
@@ -116,4 +128,6 @@ validators==0.22.0
 watchdog==3.0.0
 wcwidth==0.2.10
 wsproto==1.2.0
+xlrd==0.7.1
+xlwt==0.7.2
 zipp==3.17.0
